# agent-radio-workspace

./: .gitignore  LICENSE  PRD.md  README.md  agent-down.command  agent-up.command  pyproject.toml
Radio/: .env.example  .gitignore  CHANGELOG.md  PRD.md  README.md  pyproject.toml  start.command  stop.command
Radio/.github/workflows/: ci.yml
Radio/config/: config.yaml  segments_library.yaml  terminology.yaml
Radio/config/profiles/general_seiyuu_radio/: profile.yaml  summarize.txt  translate.txt
Radio/config/profiles/hina_radio/: profile.yaml  summarize.txt  translate.txt
Radio/config/profiles/mygo_meigo_shukai/: profile.yaml  summarize.txt  translate.txt
Radio/deploy/: radio.plist
Radio/docs/: architecture.md  deployment.md  frontend_backend_api.md  product_architecture.md  project_structure.md  web_console_recording_metrics.md
Radio/docs/decisions/: 0001-why-no-langgraph.md  0002-why-groq-whisper.md  0003-translation-strategy.md  0004-terminology-system.md  0005-gemini-summary-with-anthropic-fallback.md  0006-fine-translation-opt-in.md  0007-structured-section-summary.md  0008-recurring-segments-library.md  0009-observability-and-dynamic-stt-prompt.md
Radio/frontend/: app.js  index.html  styles.css
Radio/scripts/: main_api.py  main_bot.py  main_daemon.py  main_oneshot.py  main_radiko.py  main_resummarize.py  main_video.py  main_youtube_live.py  metrics_report.py
Radio/src/radio/: __init__.py  api.py  approval.py  config.py  health.py  history.py  jobs.py  live_detector.py  models.py  pipeline.py  playlist.py  profiles.py  radiko_playwright_source.py  radiko_source.py  recordings_layout.py  scheduler.py  segmenter.py  segments_library.py  state_store.py  stt.py  summarize.py  telegram_bot.py  telegram_sender.py  terminology.py  transcript.py  translate.py  video_source.py  xhs.py  youtube_live_source.py
Radio/src/radio/prompts/: summarize.txt  translate.txt
Radio/src/radio/utils/: ffmpeg.py  logging.py  metrics.py  retry.py
Radio/tests/: test_stt_filters.py
clip/: README.md  pyproject.toml
clip/clip/: __init__.py  account_monitor.py  aligner.py  bilibili_source.py  cli.py  config.py  ffmpeg_util.py  kb_ingest.py  lyrics.py  matcher.py  media_locator.py  models.py  packager.py  pipeline.py  profile_research.py  program_profile.py  render.py  report.py  server_routes.py  setlist.py  slice_reprocess.py  slicer.py  telegram_clip.py  title_recommender.py  trend_features.py  viral_analyzer.py  whisperx_worker.py  youtube_source.py
clip/clip/programs/: _live_summarize.txt  minetsuki_ritsu.md  minetsuki_ritsu.yaml  minetsuki_ritsu_translate.txt  sengoku_yuno.yaml
clip/static/: clipper.html  databoard.html  programs.html
clip/tests/: test_program_profile.py
docs/: project_structure.md  ux_review_2026-06-13.md
radio_kg/: .env.example  CHANGELOG.md  README.md
radio_kg/config/: settings.py
radio_kg/src/: ask.py  bench_perf.py  build_listener_db.py  (+14 more)
scripts/: com.agent.radio-kg-server.plist  com.agent.radio-scheduler-daemon.plist  com.agent.radio-telegram-bot.plist  launchd-radio-kg-server.sh  launchd-radio-scheduler-daemon.sh  launchd-radio-telegram-bot.sh  quantify_project.py
(+36 files in other folders)
